# libtdlpack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_linux.yml  build_linux_gnu.yml  build_linux_intel.yml  build_macos_gnu.yml
cmake/: PackageConfig.cmake.in
src/: CMakeLists.txt  close_tdlpack_file.f90  gridij_to_latlon.f90  latlon_to_gridij.f90  open_log_file.f90  open_tdlpack_file.f90  openlog.f90  pack_wrapper.f90  rdtm.f  rdtmc.f  read_tdlpack_file.f90  tdlpack.h  tdlpack_mod.f90  trail.f  unpack_wrapper.f90  write_ra.f90  write_station_record.f90  write_tdlpack_file.f90  write_tdlpack_record.f90  write_trailer_record.f90  writefile.f90  writesq.f90
tests/: CMakeLists.txt  test_open_log_file.c  test_open_tdlpack_file.c  test_write_ra.c  test_write_ra_stations.c  test_write_read_ra_stations.c  test_write_read_sq_stations.c  test_write_sq.c  test_write_sq_stations.c
